--- a/portfolio-bootstrap/style.css
+++ b/portfolio-bootstrap/style.css
@@ -1,27 +1,6 @@
 /* Color and font-family scheme */
 
 :root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #6c757d;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
 
   --font-family-sans-serif: 'Didact Gothic', sans-serif;
   --font-family-monospace: 'Roboto Mono', monospace;
@@ -31,15 +10,28 @@
 
 body {
 font-family: var(--font-family-monospace);
+background-color: #efefef;
+
 }
 
-/* TODO: Lägg till utrymme så att ankarlänkar fungerar ihop med sticky nav*/
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-sans-serif);
     font-weight: 600;
-    color: var(--blue);
   }
 
-  .work {
-  border-bottom: 1px dotted var(--gray);
-  }  
+h1 {
+    padding-top: 80px; /* Extra space because of sticky nav bar */
+  }
+
+  .bg-water{
+    background-color: #d2dce7;
+  }
+
+  .bg-sand {
+    background-color: #eae5e5;
+  }
+
+  .row {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
